Fix trap being armed when first constructed. Currency support for rearming traps.